@@ -70,6 +70,11 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <unistd.h>
+#ifdef USEJOBCREATE
+#ifndef JOBFAKE
+#include <job.h>
+#endif /* JOBFAKE */
+#endif /* USEJOBCREATE */
 #include <dirent.h>
 #include <errno.h>
 #include <fcntl.h>
@@ -127,8 +132,42 @@
 #endif /* HAVE_WORDEXP */
 
 #ifdef ENABLE_CSA
-	#include "csa_api.h"
-	#include "csaacct.h"
+#ifndef CSAFAKE
+#include "csa_api.h"
+#include "csaacct.h"
+
+#else
+
+typedef enum
+  {
+  WM_INFO = 1, /* Informational */
+  WM_RECV, /* Request received */
+  WM_INIT, /* Request initiated */
+  WM_SPOOL, /* Request output spooled */
+  WM_TERM /* Request terminated */
+  } wm_type;
+
+/*
+* Subtypes for workload management accounting record type WM_RECV.
+*/
+#define WM_RECV_NEW 1 /* New request */
+
+/*
+* Subtypes for workload management accounting record type WM_INIT.
+*/
+#define WM_INIT_START 1 /* Request started for first time */
+#define WM_INIT_RESTART 2 /* Request restarted */
+#define WM_INIT_RERUN 3 /* Request rerun */
+
+/*
+* Subtypes for workload management accounting record type WM_TERM.
+*/
+#define WM_TERM_EXIT 1 /* Request exited */
+#define WM_TERM_REQUEUE 2 /* Request requeued */
+#define WM_TERM_HOLD 3 /* Request checkpointed and held */
+#define WM_TERM_RERUN 4 /* Request will be rerun */
+#define WM_TERM_MIGRATE 5 /* Request will be migrated */
+#endif /* CSAFAKE */
 #endif /* ENABLE_CSA */
 
 #ifdef NOPOSIXMEMLOCK
@@ -265,8 +304,12 @@ extern char *get_local_script_path(job *pjob, char *base);
 
 
 /* END prototypes */
+
+#ifdef USEJOBCREATE
+uint64_t get_jobid(char *);
+#endif /* USEJOBCREATE */
+
 #ifdef ENABLE_CSA
-uint64_t get_csa_jobid(char *);
 void add_wkm_start(uint64_t, char *);
 void add_wkm_end(uint64_t, int64_t, char *);
 
@@ -276,8 +319,6 @@ enum csa_chk_cmd
   IS_INSTALLED = 0,
   IS_UP = 1
   };
-
-#define JOB_FAIL      (jid_t)-1
 
 #endif /* ENABLE_CSA */
 
@@ -1962,11 +2003,11 @@ int TMomFinalizeChild(
   resource *presc;
   char *path_prologuserjob;
   
-#ifdef ENABLE_CSA
+#ifdef USEJOBCREATE
   struct startjob_rtn    sjr = { 0, 0, 0};
 #else
   struct startjob_rtn    sjr = { 0, 0};
-#endif /* ENABLE_CSA */
+#endif /* USEJOBCREATE */
   
   job                   *pjob;
   task                  *ptask;
@@ -2233,7 +2274,7 @@ int TMomFinalizeChild(
     /* Set environment to reflect interactive */
     
     bld_env_variables(&vtable, "PBS_ENVIRONMENT", "PBS_INTERACTIVE");
-    
+  	
     /* get host where qsub resides */
     
     phost = arst_string("PBS_O_HOST", &pjob->ji_wattr[(int)JOB_ATR_variables]);
@@ -2282,7 +2323,7 @@ int TMomFinalizeChild(
       }
 
     FDMOVE(qsub_sock);
-    
+
     /* send job id as validation to qsub */
 	
     if (write( qsub_sock,
@@ -2293,7 +2334,7 @@ int TMomFinalizeChild(
       
       starter_return(TJE->upfds, TJE->downfds, JOB_EXEC_FAIL1, &sjr);
       }
-    
+  	
     /* receive terminal type and window size */
 	
     if ((termtype = rcvttype(qsub_sock)) == NULL)
@@ -2331,7 +2372,19 @@ int TMomFinalizeChild(
     act.sa_flags   = 0;
     
     sigaction(SIGALRM, &act, NULL);
+
+#ifdef USEJOBCREATE
+    /*
+     * Get a job id from the system
+     */
+    sjr.sj_jobid  = get_jobid(pjob->ji_qs.ji_jobid);
+
+    pjob->ji_wattr[(int)JOB_ATR_pagg_id].at_val.at_ll = sjr.sj_jobid;
     
+    pjob->ji_wattr[(int)JOB_ATR_pagg_id].at_flags =
+      ATR_VFLAG_SET | ATR_VFLAG_MODIFY;
+#endif /* USEJOBCREATE */
+  	
     /* set up the job session (update sjr) */
     
     j = set_job(pjob, &sjr);
@@ -2424,11 +2477,10 @@ int TMomFinalizeChild(
 	
 #ifdef ENABLE_CSA
       /*
-	     * Get a CSA job it and add a workload management start record
+	     * Add a workload management start record
 	     */
-      sjr.sj_csajobid  = get_csa_jobid(pjob->ji_qs.ji_jobid);
       
-      add_wkm_start(sjr.sj_csajobid, pjob->ji_qs.ji_jobid);
+      add_wkm_start(sjr.sj_jobid, pjob->ji_qs.ji_jobid);
       
 #endif /* ENABLE_CSA */
       
@@ -2645,7 +2697,19 @@ int TMomFinalizeChild(
 	
     if (LOGLEVEL >= 10)
       log_ext(-1, id, "stdout/stderr opened", LOG_DEBUG);
+
+#ifdef USEJOBCREATE
+    /*
+     * Get a job id from the system
+     */
+    sjr.sj_jobid  = get_jobid(pjob->ji_qs.ji_jobid);
+
+    pjob->ji_wattr[(int)JOB_ATR_pagg_id].at_val.at_ll = sjr.sj_jobid;
     
+    pjob->ji_wattr[(int)JOB_ATR_pagg_id].at_flags =
+      ATR_VFLAG_SET | ATR_VFLAG_MODIFY;
+#endif /* USEJOBCREATE */
+  	
     /* set up the job session (update sjr) */
     
     j = set_job(pjob, &sjr);
@@ -2684,7 +2748,7 @@ int TMomFinalizeChild(
       exit(1);
       }
     /* run prolog - standard batch job */
-
+  	
     if ((j = run_pelog( PE_PROLOG,
             path_prolog,
             pjob,
@@ -2713,11 +2777,10 @@ int TMomFinalizeChild(
     
 #ifdef ENABLE_CSA
     /*
-     * Get a CSA job it and add a workload management start record
+     * Add a workload management start record
      */
-    sjr.sj_csajobid  = get_csa_jobid(pjob->ji_qs.ji_jobid);
     
-    add_wkm_start(sjr.sj_csajobid, pjob->ji_qs.ji_jobid);
+    add_wkm_start(sjr.sj_jobid, pjob->ji_qs.ji_jobid);
     
 #endif /* ENABLE_CSA */
     
@@ -3514,18 +3577,18 @@ int TMomFinalizeJob3(
   
   if (LOGLEVEL >= 3)
 	{
-#ifdef ENABLE_CSA
-	sprintf(log_buffer, "Job %s read start return code=%d session=%ld CSA jobid=%llx",
+#ifdef USEJOBCREATE
+	sprintf(log_buffer, "Job %s read start return code=%d session=%ld jobid=%lx",
 					  pjob->ji_qs.ji_jobid,
 					  sjr.sj_code,
 					  (long)sjr.sj_session,
-					  sjr.sj_csajobid);
+					  sjr.sj_jobid);
 #else
 	sprintf(log_buffer, "Job %s read start return code=%d session=%ld",
 					  pjob->ji_qs.ji_jobid,
 					  sjr.sj_code,
 					  (long)sjr.sj_session);
-#endif /* ENABLE_CSA */
+#endif /* USEJOBCREATE */
   
 	log_record( PBSEVENT_ERROR,
 				  PBS_EVENTCLASS_JOB,
@@ -3664,14 +3727,14 @@ int TMomFinalizeJob3(
   
   pjob->ji_wattr[(int)JOB_ATR_session_id].at_flags =
   ATR_VFLAG_SET | ATR_VFLAG_MODIFY | ATR_VFLAG_SEND;
-  
-#ifdef ENABLE_CSA
-  pjob->ji_wattr[(int)JOB_ATR_pagg_id].at_val.at_ll = sjr.sj_csajobid;
+
+#ifdef USEJOBCREATE
+  pjob->ji_wattr[(int)JOB_ATR_pagg_id].at_val.at_ll = sjr.sj_jobid;
   
   pjob->ji_wattr[(int)JOB_ATR_pagg_id].at_flags =
   ATR_VFLAG_SET | ATR_VFLAG_MODIFY;
-  
-#endif /* ENABLE_CSA */
+
+#endif /* USEJOBCREATE */
   
   pjob->ji_qs.ji_state    = JOB_STATE_RUNNING;
   
@@ -3721,7 +3784,7 @@ int start_process(
   int i, j;
   int fd0, fd1, fd2;
   u_long ipaddr;
-#ifdef ENABLE_CSA
+#ifdef USEJOBCREATE
   struct  startjob_rtn sjr =
   {
 	  0, 0, 0
@@ -3731,7 +3794,7 @@ int start_process(
   {
 	  0, 0
   };
-#endif /* ENABLE_CSA */
+#endif /* USEJOBCREATE */
   
   
   if (pipe(pipes) == -1)
@@ -6486,74 +6549,68 @@ int TMomCheckJobChild(
 
 
 
+
+#ifdef USEJOBCREATE
+/*
+ * Get a job_id from the system. Return job id or -1 if error
+ */
+uint64_t get_jobid(
+	char*    pbs_jobid)
+{
+	static char *id = "get_jobid";
+	
+	uint64_t job_id;
+
+#ifndef JOBFAKE
+  job_id = job_create(0, getuid(), 0);
+#else
+  job_id = 76544;
+/*  job_id = -1; */
+#endif /* JOBFAKE */
+
+	if (job_id == JOB_FAIL)
+		{
+		if (LOGLEVEL >= 3)
+			{
+			sprintf(log_buffer, "Failed to get system job id for pbs job %s",
+							pbs_jobid);
+
+			log_err(-1, id, log_buffer);
+			}
+
+		return(job_id);
+		}
+
+	if (LOGLEVEL >= 3)
+		{
+		sprintf(log_buffer, "Got system job id = %lx(%ld) for pbs job %s",
+						job_id,
+						job_id,
+						pbs_jobid);
+
+		log_ext(-1, id, log_buffer, LOG_DEBUG);
+		}
+
+	return(job_id);
+}	 /* END get_jobid() */
+#endif  /* USEJOBCREATE */
+
+
+
+
 #ifdef ENABLE_CSA
 /*
  * Check to see if CSA in installed or turned on. Return 1 if it is good else 0
  */
 
-
-#if 0
-int check_csa_status(
-	enum csa_chk_cmd chk_action)
-
-{
-	int csa_stat = 0;
-
-	char pbuf[120];
-	char csa_name[40];
-	char csa_state[40];
-	int csa_installed = 0;
-	int csa_running = 0;
-	FILE *fp;
-
-	if ((fp = popen("/usr/sbin/csaswitch -c status", "r")) != NULL)
-		{
-		while (fgets(pbuf, 80, fp) != NULL)
-			{
-
-			/* ignore the comment / header lines */
-
-			if (pbuf[0] == '#')
-				{
-				continue;
-				}
-
-			sscanf(pbuf, "%s %s", csa_name, csa_state);
-
-			if (strncmp(csa_name, "csa", 3) == 0)
-				{
-				csa_installed = 1;
-				} else if ((strncmp(csa_name, "wkmg", 4) == 0) && (strncmp(csa_state, "On", 2) == 0))
-				{
-				csa_running = 1;
-				}
-			}
-
-		pclose(fp);
-
-		switch (chk_action)
-			{
-			
-			case IS_INSTALLED:
-				csa_stat = csa_installed;
-				break;
-
-			case IS_UP:
-				csa_stat = csa_running;
-				break;
-			}
-		}
-
-	return(csa_stat);
-}
-
-#else
-
 int check_csa_status(enum csa_chk_cmd chk_action)
 	{
+#ifndef CSAFAKE	
 	static char *id = "check_csa_status";
+#endif /* CSAFAKE */	
 	int csa_stat = 0;
-	
+
+#ifndef CSAFAKE	
 	struct csa_check_req ck_req;
 	
 	ck_req.ck_stat.am_id = (chk_action == IS_INSTALLED) ? ACCT_KERN_CSA : ACCT_DMD_WKMG;
@@ -6581,48 +6638,15 @@ int check_csa_status(enum csa_chk_cmd chk_action)
 		{
 		csa_stat = (ck_req.ck_stat.am_status != ACS_ON) ? 0 : 1;
 		}
-	
+
+#else
+  csa_stat = 1;
+
+#endif /* CSAFAKE */	
 	return(csa_stat);
 	}
 
-#endif
 
-uint64_t get_csa_jobid(
-	char*    pbs_jobid)
-{
-	static char *id = "get_csa_jobid";
-	
-	uint64_t csa_job_id;
-	
-	if (check_csa_status(IS_INSTALLED))
-		{
-		csa_job_id = job_create(0, getuid(), 0);
-	
-		if (csa_job_id == JOB_FAIL)
-			{
-			if (LOGLEVEL >= 3)
-				{
-				sprintf(log_buffer, "Failed to create CSA job id for pbs job %s",
-								pbs_jobid);
-	
-				log_err(-1, id, log_buffer);
-				}
-	
-			exit(0);
-			}
-	
-		if (LOGLEVEL >= 3)
-			{
-			sprintf(log_buffer, "Created CSA job id = %llx for pbs job %s",
-							csa_job_id,
-							pbs_jobid);
-	
-			log_ext(-1, id, log_buffer, LOG_DEBUG);
-			}
-		}
-	
-	return(csa_job_id);
-}	 /* END get_csa_jobid() */
 
 
 
@@ -6653,8 +6677,10 @@ int create_WLM_Rec(
 	{
 	static char *id = "create_WLM_Rec";
 
+#ifndef CSAFAKE
 	struct csa_wra_req cw;
 	struct wkmgmtbs wkm;
+#endif /* CSAFAKE */
 
 	char    rec_type[8];
 	char    sub_type[8];
@@ -6738,6 +6764,20 @@ int create_WLM_Rec(
 		log_err(-1, id, log_buffer);
 		return 0;
 		}
+
+#ifdef CSAFAKE
+  if (LOGLEVEL >= 7)
+    {
+    sprintf(log_buffer, "Creating FAKE CSA workload management %s - %s record for: "
+            "job_id = %lx, compCode = %d, pbs job %s",
+            (char*)&rec_type, (char*)&sub_type,
+            job_id, (int)compCode,
+            pbs_jobid);
+
+		log_ext(-1, id, log_buffer, LOG_DEBUG);
+    }
+
+#else
 
 	if (LOGLEVEL >= 7)
 		{
@@ -6842,6 +6882,8 @@ int create_WLM_Rec(
 			}
 		}
 
+#endif /* CSAFAKE */
+
 	return 1;
 	}
 
@@ -6859,6 +6901,23 @@ void add_wkm_start(
 
 	if (check_csa_status(IS_UP))
 		{
+		
+		/* check if we have a valid job id, if not just return */
+		
+		if (job_id == JOB_FAIL)
+  		{
+      if (LOGLEVEL >= 2)
+  			{
+  			sprintf(log_buffer,
+  							"%s called with bad job id = %lx for pbs job %s",
+  							id,
+  							job_id,
+  							pbs_jobid);
+
+  			log_err(-1, id, log_buffer);
+  			}
+  		return;
+  		}
 
 		/* Add a workload management received record before the start */
 
@@ -6867,7 +6926,7 @@ void add_wkm_start(
 			if (LOGLEVEL >= 7)
 				{
 				sprintf(log_buffer,
-								"Added CSA workload management WM_RECV for job id = %llx for pbs job %s",
+								"Added CSA workload management WM_RECV for job id = %lx for pbs job %s",
 								job_id,
 								pbs_jobid);
 
@@ -6878,7 +6937,7 @@ void add_wkm_start(
 			if (LOGLEVEL >= 2)
 				{
 				sprintf(log_buffer,
-								"Failed to add CSA workload management WM_RECV for job id = %llx for pbs job %s",
+								"Failed to add CSA workload management WM_RECV for job id = %lx for pbs job %s",
 								job_id,
 								pbs_jobid);
 
@@ -6893,7 +6952,7 @@ void add_wkm_start(
 			if (LOGLEVEL >= 7)
 				{
 				sprintf(log_buffer,
-								"Added CSA workload management WM_INIT for job id = %llx for pbs job %s",
+								"Added CSA workload management WM_INIT for job id = %lx for pbs job %s",
 								job_id,
 								pbs_jobid);
 
@@ -6902,7 +6961,7 @@ void add_wkm_start(
 			} else if (LOGLEVEL >= 2)
 			{
 			sprintf(log_buffer,
-							"Failed to add CSA workload management WM_INIT for job id = %llx for pbs job %s",
+							"Failed to add CSA workload management WM_INIT for job id = %lx for pbs job %s",
 							job_id,
 							pbs_jobid);
 
@@ -6911,7 +6970,7 @@ void add_wkm_start(
 		}
 
 	return;
-	}	 /* END add_wkm_recv() */
+	}	 /* END add_wkm_start() */
 
 
 
@@ -6930,12 +6989,30 @@ void add_wkm_end(
 
 	if (check_csa_status(IS_UP))
 		{
+		
+		/* check if we have a valid job id, if not just return */
+		
+		if (job_id == JOB_FAIL)
+  		{
+      if (LOGLEVEL >= 2)
+  			{
+  			sprintf(log_buffer,
+  							"%s called with bad job id = %lx for pbs job %s",
+  							id,
+  							job_id,
+  							pbs_jobid);
+
+  			log_err(-1, id, log_buffer);
+  			}
+  		return;
+  		}
+
 		if (create_WLM_Rec(pbs_jobid, job_id, WM_TERM, WM_TERM_EXIT, 0, 0, comp_code, 0))
 			{
 			if (LOGLEVEL >= 7)
 				{
 				sprintf(log_buffer,
-								"Added CSA workload management WM_TERM for job id = %llx for pbs job %s",
+								"Added CSA workload management WM_TERM for job id = %lx for pbs job %s",
 								job_id,
 								pbs_jobid);
 
@@ -6944,7 +7021,7 @@ void add_wkm_end(
 			} else if (LOGLEVEL >= 2)
 			{
 			sprintf(log_buffer,
-							"Failed to add CSA workload management WM_TERM for job id = %llx for pbs job %s",
+							"Failed to add CSA workload management WM_TERM for job id = %lx for pbs job %s",
 							job_id,
 							pbs_jobid);
 
