@@ -14,6 +14,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       job's resources haven't been defined)
   e - altered the display of walltime remaining so that the xml produced by
       qstat -f stays consistent. Also updated the man page.
+  b - split Cray job library and CSA functionality since CSA is dependant on job
+      library but job library is not dependant on CSA
 
 2.4.5
   b - epilogue.user scripts were being run with prologue argments. Fixed
